fixing some spacings in technology page

--- a/src/app/technology/page.module.scss
+++ b/src/app/technology/page.module.scss
@@ -27,9 +27,11 @@
       @include md {
         font-size: 1.111em;
         text-align: start;
+        margin-left: 2.333em;
       }
 
       @include lg {
+        margin-left: 0;
         font-size: $fs-500;
       }
     }
@@ -46,7 +48,7 @@
       @include lg {
         position: relative;
         margin-top: 4em;
-        flex-direction: row;
+        flex-direction: row-reverse;
         align-items: flex-start;
         gap: 6em;
       }
@@ -103,6 +105,7 @@
 
       @include md {
         font-size: 2.5rem;
+        margin-bottom: 0.5em;
       }
 
       @include lg {
